[tool.poetry]
name = "kata-tdd"
version = "0.1.0"
description = ""
authors = ["Louis Marx <louis.marx@theodo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
